Break out a "client-runner" sub-project from "client"
Do this in anticipation of adding the the JMeter load test. The "client-runner" will be the
programmatic runner and the JMeter test plans (.jmx files) will the JMeter-based runners.
"client" is the common component between both "client-runner" and JMeter test plans so it
must be extracted and standalone.